2007-11-13  Adam Roben  <aroben@apple.com>

        Add the http/tests/media directory to the Windows Skipped file

        * platform/win/Skipped:

2007-11-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Adam Roben.

        Fix for <rdar://problem/5382579>
        http/tests/security/cross-frame-access-put.html reports large 
        negative numbers for screenLeft and screenTop (Mac reports "0")

        * platform/win/Skipped: remove http/tests/security/cross-frame-access-put.html

2007-11-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.
        
        Make this a text-only test.
        
        * fast/dom/Window/window-onFocus-expected.txt: Added.
        * fast/dom/Window/window-onFocus.html:
        * platform/mac/fast/dom/Window/window-onFocus-expected.checksum: Removed.
        * platform/mac/fast/dom/Window/window-onFocus-expected.png: Removed.
        * platform/mac/fast/dom/Window/window-onFocus-expected.txt: Removed.

2007-11-12  Antti Koivisto  <antti@apple.com>

        Reviewed by Adele.
        
        - add HTTP media test for stalling load
        - update tests that don't specifically test autoplay feature to not use autoplay 
          attribute since playback may start before event listeners are registered

        * http/tests/media: Added.
        * http/tests/media/video-load-and-stall.cgi: Added.
        * http/tests/media/video-play-stall-expected.txt: Added.
        * http/tests/media/video-play-stall.html: Added.
        * media/video-autoplay.html:
        * media/video-dom-loopstart.html:
        * media/video-end.html:
        * media/video-loopcount.html:
        * media/video-loopend.html:
        * media/video-loopstart.html:

2007-11-13  Darin Adler  <darin@apple.com>

        Reviewed by Geoff.

        - test for http://bugs.webkit.org/show_bug.cgi?id=11231
          RegExp bug when handling newline characters and other regular expression
          behavior that is different for JavaScript and PCRE